# homebrew-tap

./: README.md
Cask/: obs-virtualcam.rb  phantomjs.rb  vlc-browser-plugin.rb  wifi-pass.rb
Formula/: DATA  ffmpeg.rb  ffplay.rb  ffprobe.rb  ffserver.rb  gfortran.rb  grace-patched.rb  macdict.rb  platon.rb  sudo-touchid.rb  waifu2x.rb  zeo++.rb  zvbi.rb
Formula/macdict/: .gitignore  Makefile  README.md  macdict.c  macdict.m  macdict.py  macdict.sh  macdict2.m  macdict2.swift  macdict2.swift.h
Formula/osxdict/: CMakeLists.txt  README.md  osxdict.mm  osxdict.rb
